--- a/src/App.css
+++ b/src/App.css
@@ -85,4 +85,56 @@ img, video {
 
 .secTile{
   display: none;
+  text-align: center;
+  padding: 1rem 0;
+  font-size: 25px;
+  font-weight: 700;
+  color: var(--blackColor);
+  flex-direction: column;
+  gap: 1rem;
+
+  p{
+    color: var(--blackColor);
+    font-size: var(--normalFontSize);
+    font-weight: 400;
+  }
+}
+
+.secHeading{
+  padding-bottom: 1.5rem;
+
+}
+
+.btn .icon{
+  margin-left: 0.5rem;
+}
+
+.btn:hover{
+  color: var(--primaryColor);
+  background: var(--primaryColorLight);
+}
+
+.section{
+  padding: 4rem 0 2rem;
+}
+
+.container{
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+::selection{
+  background: var(--primaryColorLight);
+  color: var(--primaryColor);
+}
+
+::-webkit-scrollbar{
+  width: 10px;
+  background: var(--primaryColorLight);
+}
+
+::-webkit-scrollbar-thumb{
+  width: 10px;
+  background: var(--primaryColor);
+  border-radius: var(--borderRadiud);
 }
