--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -6,7 +6,7 @@
   font-family: "Montserrat", sans-serif;
 }/*# sourceMappingURL=App.css.map */
 
-root{
+:root{
   --primaryColor: hsl(14, 90%, 53%);
   --primaryColorLight: hsl(14, 96%, 91%);
   --bgColor: hsl(0, 0%, 100%);
@@ -32,12 +32,12 @@ root{
 .navBar{
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     width: 100%;
     padding: 1.5rem 2rem;
     position: fixed;
     border-bottom: 1.5px solid var(--primaryColor);
-    background: #daa3a3;
+    // background: #daa3a3;
     backdrop-filter: blur (5px);
 
     .logoDiv {
@@ -57,7 +57,7 @@ root{
         .menu{
             position: absolute;
             width: 70%;
-            top: 8rem;
+            top: -100rem;
             right: 50%;
             left: 50%;
             transform: translate(-50%);
@@ -74,14 +74,35 @@ root{
                 padding: 1rem 0;
                 text-align: center;
                 cursor: pointer;
-                
                 &:hover{
                     color: var(--primaryColor);
                     border-bottom: 1.5px solid var(--primaryColor);
 
                 }
             }
+
         }
+    }
+
+    .menuIcon, .closeIcon{
+        font-size: var(--h1FontSize);
+        &:hover{
+            color: var(--primaryColor);
+
+        }
+    }
+
+    .closeIcon{
+        position: absolute;
+        bottom: -15px;
+        right: 50%;
+        left: 50%;
+        color: var(--blackColor);
+        transform: translate(-50%);
+    }
+
+    .showNavBar{
+        top: 8rem;
     }
     
    
