--- a/src/Components/Destinations/Destination.scss
+++ b/src/Components/Destinations/Destination.scss
@@ -88,11 +88,11 @@ root{
                     height: 100%;
                 width: 100%;
                 object-fit: cover;
-                transition: all .3s ease-in-out;
+                transition: all .9s ease-in-out;
                 }
             }
 
-            &{
+            &:hover{
                 .imgDiv{
                     img{
                         scale: 1.1;
