--- a/src/Components/Portfolio/Portfolio.scss
+++ b/src/Components/Portfolio/Portfolio.scss
@@ -29,13 +29,13 @@ root{
 
 }
 
-.portifolio{
+.portfolio{
     .secContainer{
         gap: 2rem;
         .leftContent{
 
             .grid{
-                .singlePortifolio{
+                .singlePortfolio{
                     gap: 1rem;
                     align-items: flex-start;
 
@@ -58,3 +58,4 @@ root{
         }
     }
 }
+
