--- a/src/Components/Reviews/Reviews.scss
+++ b/src/Components/Reviews/Reviews.scss
@@ -65,7 +65,19 @@ root{
                     width: 40px;
                     border-radius: 50%;
                     object-fit: cover;
+                    border: 2px solid rgb(255, 255, 255);
+                    box-shadow: 0 0 2px 2px rgb(251, 212, 194);
                 }
+            }
+        }
+
+        .imgDiv{
+            height: 250px;
+            width: 100%;
+            border-radius: 10px;
+            overflow: hidden;
+            img{
+                object-fit: cover;
             }
         }
     }
