--- a/src/Components/Questions/Questions.scss
+++ b/src/Components/Questions/Questions.scss
@@ -10,6 +10,7 @@ root{
   --primaryColor: hsl(14, 90%, 53%);
   --primaryColorLight: hsl(14, 96%, 91%);
   --bgColor: hsl(0, 0%, 100%);
+//   --cardColor: hsl(14, 90%, 53%);
   --formColor: hsl(20, 42%, 87%);
   --whiteColor: hsl(0, 0%, 100%);
   --blackColor: hsl(0, 0%, 18%);
@@ -26,5 +27,49 @@ root{
   --smallFontSize: 0.813rem;
   --smallestFontSize: 0.75rem;
   --borderRadiud: 3rem;
+
+}
+
+.accordionContainer{
+    .title{
+        font-size: var(--normalFontSize);
+        align-items: center;
+        padding: 1rem;
+        border-radius: 10px;
+        justify-content: space-between;
+        background: var(--primaryColorLight);
+
+        span {
+            cursor: pointer;
+            .icon{
+                font-size: 1.2rem;
+                color: var(--blackColor);
+            }
+        }
+    }
+
+    .description{
+        font-size: var(--smallFontSize);
+        display: flex;
+        align-items: center;
+        line-height: 20px;
+        white-space: pre-line;
+        height: 140px;
+        transition: all .3s ease-in-out;
+        opacity: 1;
+        padding: 0 1rem;
+        background: var(--greyText);
+        border-radius: 0 0 10px 18px;
+        color: var(--blackColor);
+    }
+
+    .show {
+        height: 140px;
+        opacity: 1;
+    }
+    .activeTitle{
+        background: var(--primaryColorLight);
+        border-radius: 10px 10px 0 0;
+    }
 
 }
