--- a/src/Components/Questions/Questions.scss
+++ b/src/Components/Questions/Questions.scss
@@ -54,13 +54,14 @@ root{
         align-items: center;
         line-height: 20px;
         white-space: pre-line;
-        height: 140px;
+        height: 0;
         transition: all .3s ease-in-out;
-        opacity: 1;
+        opacity: 0;
         padding: 0 1rem;
         background: var(--greyText);
         border-radius: 0 0 10px 18px;
         color: var(--blackColor);
+        
     }
 
     .show {
