--- a/src/Components/Questions/Questions.scss
+++ b/src/Components/Questions/Questions.scss
@@ -102,6 +102,11 @@ root{
                     color: var(--blackColor);
                 }
             }
+
+            textarea{
+                height: 100px;
+                border-radius: 10px;
+            }
         }
     }
 }
