--- a/src/Components/Questions/Questions.css
+++ b/src/Components/Questions/Questions.css
@@ -1,1 +1,97 @@
-/*# sourceMappingURL=Questions.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200,400;500;700;900&display=swap");
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+} 
+root {
+  --primaryColor: hsl(14, 90%, 53%);
+  --primaryColorLight: hsl(14, 96%, 91%);
+  --bgColor: hsl(0, 0%, 100%);
+  --formColor: hsl(20, 42%, 87%);
+  --whiteColor: hsl(0, 0%, 100%);
+  --blackColor: hsl(0, 0%, 18%);
+  --greyText: hsl(0, 0%, 51%);
+  --inputColor: hsl(330, 12%, 97%);
+  --cardColor: hsla (300, 3%, 94%);
+  /* Font Typography */
+  --biggestFontSize: 2.5rem;
+  --h1FontSize: 1.6rem;
+  --h2FontSize: 1.25rem;
+  --h3FontSize: 1rem;
+  --normalFontSize: 0.938rem;
+  --smallFontSize: 0.813rem;
+  --smallestFontSize: 0.75rem;
+  --borderRadiud: 3rem;
+}
+
+.accordionContainer .title {
+  font-size: var(--normalFontSize);
+  align-items: center;
+  padding: 1rem;
+  border-radius: 10px;
+  justify-content: space-between;
+  background: var(--primaryColorLight);
+}
+.accordionContainer .title span {
+  cursor: pointer;
+}
+.accordionContainer .title span .icon {
+  font-size: 1.2rem;
+  color: var(--blackColor);
+}
+.accordionContainer .description {
+  font-size: var(--smallFontSize);
+  display: flex;
+  align-items: center;
+  line-height: 20px;
+  white-space: pre-line;
+  height: 0;
+  transition: all 0.3s ease-in-out;
+  opacity: 0;
+  padding: 0 1rem;
+  background: var(--greyText);
+  border-radius: 0 0 10px 18px;
+  color: var(--blackColor);
+}
+.accordionContainer .show {
+  height: 140px;
+  opacity: 1;
+}
+.accordionContainer .activeTitle {
+  background: var(--primaryColorLight);
+  border-radius: 10px 10px 0 0;
+}
+
+.questions .secHeading h3, .questions .secHeading h4 {
+  padding-bottom: 1.5rem;
+}
+.questions .secHeading p {
+  font-size: var(--smallestFontSize);
+  color: var(--blackColor);
+  padding-bottom: 1rem;
+}
+.questions .form .formContent {
+  gap: 1rem;
+}
+.questions .form .formContent input, .questions .form .formContent textarea {
+  background: var(--primaryColorLight);
+  width: 100%;
+  padding: 1rem;
+  border: none;
+  outline: none;
+  border-radius: var(--borderRadiud);
+}
+.questions .form .formContent input::-moz-placeholder, .questions .form .formContent textarea::-moz-placeholder {
+  font-size: var(--smallestFontSize);
+  color: var(--blackColor);
+}
+.questions .form .formContent input::placeholder, .questions .form .formContent textarea::placeholder {
+  font-size: var(--smallestFontSize);
+  color: var(--blackColor);
+}
+.questions .form .formContent textarea {
+  height: 100px;
+  border-radius: 10px;
+}/*# sourceMappingURL=Questions.css.map */
