--- a/src/Components/Contacts/ContactUs.scss
+++ b/src/Components/Contacts/ContactUs.scss
@@ -69,6 +69,13 @@ root{
             }
 
             button{
+                padding: 20px;
+                border: none;
+                border-radius: 20px;
+                background: var(--primaryColor);
+                color: #fff;
+                cursor: pointer;
+                font-weight: 600;
                 
             }
         }
