--- a/src/Components/Contacts/ContactUs.scss
+++ b/src/Components/Contacts/ContactUs.scss
@@ -55,6 +55,13 @@ root{
 
     .formContainer{
         flex: 1;
+        position: relative;
+
+        .phoneSvg{
+            stroke: var(--primaryColor);
+            position: absolute;
+            margin: auto;
+        }
 
         form{
             display: flex;
