--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -43,6 +43,7 @@ root{
                 display: flex;
                 color: var(--blackColor);
                 font-weight: 500;
+                font-size: 25px;
                 cursor: pointer;
                 align-items: center;
                 justify-content: center;
@@ -50,8 +51,26 @@ root{
 
                 .icon{
                     gap: .5rem;
+                    color: var(--blackColor);
                 }
 
+            }
+
+            .socials{
+                gap: .5rem;
+                margin: auto;
+                justify-content: center;
+
+                .icon{
+                    font-size: 25px;
+                    background: var(--primaryColor);
+                    border-radius: 50%;
+                    padding: 8px;
+                    color: var(--whiteColor);
+                    &:hover{
+                        background: var(--primaryColorLight);
+                    }
+                }
             }
         }
     }
