media queries for navbar of width 1240px

--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -142,3 +142,16 @@
     }
 }
 
+@media screen and (min-width: 1240px){
+    .navBar{
+        padding: 2rem 6rem;
+        .menu{
+            ul{
+                gap: 4rem;
+            }
+        }
+    }
+}
+
+
+
