--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -81,3 +81,30 @@
 
 }
 
+@media screen and (min-width:480px){
+    .Home{
+        .sectionText{
+            padding: 0 2rem;
+            justify-content: center;
+            text-align: center;
+            width: 100%;
+
+            h1{
+                font-size: var(--biggestFontSize);
+                font-weight: 900;
+            }
+
+            p{
+                padding:  1rem 0;
+                font-size: var(--h2FontSize);
+                max-width: 70%;
+                margin: auto;
+            }
+
+            .btn{
+                font-size: var(--h3FontSize);
+                margin: auto;
+            }
+        }
+    }
+}
