--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -108,3 +108,33 @@
         }
     }
 }
+
+@media screen and (min-width: 769px){
+    Home{
+        .sectionText{
+            width: 100%;
+
+            h1{
+                font-size: 4rem;
+                font-weight: 900;
+                max-width: 70%;
+                margin: auto;
+            }
+
+            p{
+                padding: 1rem 0;
+                font-size: var(--h2FontSize);
+                max-width: 70%;
+                margin: auto;
+            }
+
+            .btn{
+                gap: .5rem;
+                padding-right: 2rem;
+                padding-left: 2rem;
+                font-size: var(--h3FontSize);
+                margin: auto;
+            }
+        }
+    }
+}
