--- a/src/Components/Subscribe/Subscribe.scss
+++ b/src/Components/Subscribe/Subscribe.scss
@@ -29,16 +29,30 @@ root{
 
 }
 
+.subscribe {
+    /* Add background image URL and other styles */
+    background-image: url('../../Assets/pexels-aleksandar-pasaric-356286.jpg'); /* Path to your background image */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    // padding: 50px 0; /* Adjust padding as needed */
+  
+    /* Other existing styles */
+    /* ... */
+  }
+
 
 .subscribe{
     .secContainer{
         .textDiv{
             h4{
                 font-size: var(--h2FontSize);
-                color: var(--blackColor);
+                color: var(--primaryColor);
             }
             p{
                 padding: 1rem;
+                font-size: medium;
+                color: var(--primaryColor);
             }
 
             .btn{
