--- a/src/Components/Reviews/Reviews.scss
+++ b/src/Components/Reviews/Reviews.scss
@@ -29,6 +29,18 @@ root{
 
 }
 
+.review {
+    /* Add background image URL and other styles */
+    background-image: url('../../Assets/pexels-anna-zhilina-8133422.jpg'); /* Path to your background image */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    // padding: 50px 0; /* Adjust padding as needed */
+  
+    /* Other existing styles */
+    /* ... */
+  }
+
 .review{
     .secContainer{
         .textDiv{
@@ -41,12 +53,12 @@ root{
 
             h3{
                 font-size: var(--h2FontSize);
-                color: var(--blackColor);
+                color: var(--primaryColor);
                 padding: 1rem 0;
             }
 
             p{
-                color: var(--blackColor);
+                color: #fff;
             }
 
             .stars{
