--- a/src/Components/Destinations/Destination.scss
+++ b/src/Components/Destinations/Destination.scss
@@ -22,6 +22,17 @@ root{
   --borderRadiud: 3rem;
 
 }
+.destination {
+    /* Add background image URL and other styles */
+    background-image: url('../../Assets/pexels-omar-markhieh-1438863.jpg'); /* Path to your background image */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    // padding: 50px 0; /* Adjust padding as needed */
+  
+    /* Other existing styles */
+    /* ... */
+  }
 
 .destination{
     .secContainer{
