--- a/src/Components/Questions/Questions.scss
+++ b/src/Components/Questions/Questions.scss
@@ -89,7 +89,7 @@ root{
 
 .questions{
     .secHeading{
-        h4{
+        h3,h4{
             padding-bottom: 1.5rem;
             color: #FFF;
         }
