min width 0g 1040px

--- a/src/Components/Portfolio/Portfolio.scss
+++ b/src/Components/Portfolio/Portfolio.scss
@@ -50,6 +50,7 @@ root{
             }
             p{
                 color: #fff;
+                font-size: small;
             }
 
             .grid{
