--- a/src/Components/Questions/Questions.scss
+++ b/src/Components/Questions/Questions.scss
@@ -97,6 +97,7 @@ root{
             font-size: var(--smallestFontSize);
             color: #FFF;
             padding-bottom: 1rem;
+            font-size: small;
         }
     }
 
