--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -138,3 +138,19 @@
         }
     }
 }
+
+@media screen and (min-width: 1040px){
+    .Home{
+        position: relative;
+
+        .popularPlaces{
+            display: block;
+            position: absolute;
+            bottom: 10%;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    }
+}
