most popular places

--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -151,6 +151,30 @@
             display: flex;
             align-items: center;
             justify-content: center;
+
+            .content{
+
+                h3{
+                    color: var(--whiteColor);
+                    padding: 1rem 0;
+                    position: relative;
+                    &::after{
+                        content: '';
+                        width: 83%;
+                        height: 2px;
+                        background: rgb(202, 202, 202);
+                        right: 0;
+                        bottom: 50%;
+                        position: absolute;
+                    }
+                }
+
+                .images{
+                    align-items: center;
+                    justify-content: center;
+                }
+            }
+
         }
     }
 }
