--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -143,46 +143,55 @@
     .Home{
         position: relative;
 
-        .popularPlaces{
-            display: block;
-            position: absolute;
-            bottom: 10%;
-            width: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+        .sectionText{
 
-            .content{
-
-                h3{
-                    color: var(--whiteColor);
-                    padding: 1rem 0;
-                    position: relative;
-                    &::after{
-                        content: '';
-                        width: 83%;
-                        height: 2px;
-                        background: rgb(202, 202, 202);
-                        right: 0;
-                        bottom: 50%;
-                        position: absolute;
-                    }
-                }
-
-                .images{
-                    align-items: center;
-                    justify-content: center;
-                    gap: 2rem;
-
-                    img{
-                        height: 100px;
-                        width: 210px;
-                        object-fit: cover;
-                        border-radius: 10px;
-                    }
-                }
+            h1{
+                font-size: 4.5rem;
+                font-weight: 900;
+                max-width: 70%;
+                margin: auto;
             }
-
         }
+            .popularPlaces{
+                display: block;
+                position: absolute;
+                bottom: 6%;
+                width: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+                .content{
+
+                    h3{
+                        color: var(--whiteColor);
+                        padding: 1rem 0;
+                        position: relative;
+                        &::after{
+                            content: '';
+                            width: 83%;
+                            height: 2px;
+                            background: rgb(202, 202, 202);
+                            right: 0;
+                            bottom: 50%;
+                            position: absolute;
+                        }
+                    }
+
+                    .images{
+                        align-items: center;
+                        justify-content: center;
+                        gap: 2rem;
+
+                        img{
+                            height: 100px;
+                            width: 210px;
+                            object-fit: cover;
+                            border-radius: 10px;
+                        }
+                    }
+                }
+
+            }
     }
 }
