--- a/src/App.css
+++ b/src/App.css
@@ -83,8 +83,8 @@ img, video {
   }
 }
 
-.secTile{
-  display: none;
+.secTitle{
+  display: grid;
   text-align: center;
   padding: 1rem 0;
   font-size: 25px;
@@ -140,7 +140,7 @@ img, video {
 }
 
 
-@media screen  and (min-width: 840px) {
+/* @media screen  and (min-width: 840px) {
   .section{
     padding: 4rem 0 3rem;
   }
@@ -150,4 +150,4 @@ img, video {
     margin: auto;
   }
   
-}
+} */
