--- a/src/Components/Destinations/Destination.scss
+++ b/src/Components/Destinations/Destination.scss
@@ -164,3 +164,98 @@ root{
     }
 }
 
+@media screen and (min-width: 520px){
+    .destination{
+        .secContainer{
+            .searchField{
+                grid-template-columns: repeat(2, 1fr);
+            }
+
+            .destinationContainer{
+                grid-template-columns: repeat(2, 1fr);
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 640px){
+    .destination{
+        .secContainer{
+            
+
+            .secMenu{
+                display: block;
+                .flex{
+                    width: 100%;
+                    margin: 2rem auto;
+                    justify-content: center;
+                    gap: 1rem;
+
+                    li{
+                        background: transparent;
+                        padding: 10px 17px;
+                        border-radius: var(--borderRadiud);
+                        color: #fff;
+                        border: 1.5px dashed transparent;
+                        cursor: pointer;
+
+                        &:hover{
+                            color: var(--primaryColor);
+                            border: 1.5px dashed var(--primaryColor);
+                        }
+                    }
+                    .active{
+                        color: var(--primaryColor);
+                        border: 1.5px dashed var(--primaryColor);
+                    }
+                }
+            }
+
+            
+        }
+    }
+}
+
+@media screen and (min-width: 1014px){
+    .destination{
+        .secContainer{
+
+            .secTitle{
+                .redText{
+                    font-size: var(--normalFontSize);
+                }
+
+                h3{
+                    font-size: var(--h2FontSize);
+                }
+            }
+            
+
+            .secMenu{
+                .flex{
+                    justify-content: left;
+                
+                    li{
+                        background: transparent;
+                        padding: 10px 17px;
+                        border-radius: var(--borderRadiud);
+                        color: #fff;
+                        border: 1.5px dashed transparent;
+                        cursor: pointer;
+
+                        &:hover{
+                            color: var(--primaryColor);
+                            border: 1.5px dashed var(--primaryColor);
+                        }
+                    }
+                    .active{
+                        color: var(--primaryColor);
+                        border: 1.5px dashed var(--primaryColor);
+                    }
+                }
+            }
+
+            
+        }
+    }
+}
