--- a/src/Components/Destinations/Destination.scss
+++ b/src/Components/Destinations/Destination.scss
@@ -226,7 +226,11 @@ root{
                 }
 
                 h3{
-                    font-size: var(--h2FontSize);
+                    font-size: var(--h1FontSize);
+                }
+
+                p{
+                    font-size: var(--h3FontSize);
                 }
             }
             
