--- a/src/Components/Reviews/Reviews.scss
+++ b/src/Components/Reviews/Reviews.scss
@@ -96,3 +96,24 @@ root{
     }
 
 }
+
+@media screen and (min-width: 480px){
+    .review{
+        .secContainer{
+            .textDiv{
+                .redText{
+                    font-size: var(--normalFontSize);
+                }
+
+                h3{
+                    font-size: 20px;
+                    color: var(--blackColor);
+                }
+                p{
+                    // color: var(--blackColor);
+                    font-size: var(--normalFontSize);
+                }
+            }
+        }
+    }
+}
