--- a/src/Components/Reviews/Reviews.scss
+++ b/src/Components/Reviews/Reviews.scss
@@ -113,6 +113,65 @@ root{
                     // color: var(--blackColor);
                     font-size: var(--normalFontSize);
                 }
+
+                .stars{
+                    .icon{
+                        font-size: var(--h2FontSize);
+                    }
+                }
+
+                .clientsImages{
+                    img{
+                        height: 50px;
+                        width: 50px;
+                    }
+                }
+            }
+
+            .imgDiv{
+                height: 250px;
+                width: 100%;
+                img{
+                    height: 100%;
+                    width: 100%;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 740px){
+    .review{
+        .secContainer{
+            grid-template-columns: repeat(2,1fr);
+        }
+
+        .textDiv{
+            .redText{
+                font-size: var(--normalFontSize);
+            }
+
+            h3{
+                font-size: 20px;
+                color: var(--normalFontSize);
+            }
+
+            p{
+                color: var(--blackColor);
+                font-size: var(--normalFontSize);
+            }
+
+            .stars{
+                .icon{
+                    font-size: var(--h2FontSize);
+                }
+            }
+
+            .clientsImages{
+                img{
+                    height: 50px;
+                    width: 50px;
+                }
             }
         }
     }
