--- a/src/Components/Reviews/Reviews.scss
+++ b/src/Components/Reviews/Reviews.scss
@@ -31,7 +31,7 @@ root{
 
 .review {
     /* Add background image URL and other styles */
-    background-image: url('../../Assets/pexels-anna-zhilina-8133422.jpg'); /* Path to your background image */
+    background-image: url('../../Assets/pexels-karen-f-8169146.jpg'); /* Path to your background image */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -107,7 +107,7 @@ root{
 
                 h3{
                     font-size: 20px;
-                    color: var(--blackColor);
+                    // color: var(--blackColor);
                 }
                 p{
                     // color: var(--blackColor);
@@ -175,4 +175,34 @@ root{
             }
         }
     }
+}
+
+@media screen and (min-width: 1240px){
+    .review{
+        .secContainer{
+            gap: 3rem;
+
+            .textDiv{
+                .redText{
+                    font-size: var(--h3FontSize);
+                }
+
+                h3{
+                    font-size: var(--h1FontSize);
+                    // color: var(--blackColor);
+                }
+
+                p{
+                    // color: var(--blackColor);
+                    font-size: var(--h2FontSize);
+                    line-height: 2rem;
+                }
+            }
+
+            .imgDiv{
+                height: 300px;
+            }
+        }
+    }
+
 }
