--- a/src/Components/Questions/Questions.scss
+++ b/src/Components/Questions/Questions.scss
@@ -124,3 +124,26 @@ root{
         }
     }
 }
+
+@media screen and (min-width: 640px) {
+    .accordionContainer{
+        .title{
+            font-size: var(--h3FontSize);
+
+            span{
+                .icon{
+                    font-size: 1.5rem;
+                }
+            }
+        }
+
+        .description{
+            font-size: var(--normalFontSize);
+        }
+
+        .show{
+            height: 150px;
+        }
+    }
+    
+}
