--- a/src/Components/Questions/Questions.scss
+++ b/src/Components/Questions/Questions.scss
@@ -171,6 +171,11 @@ root{
                             // color: var(--blackColor);
                         }
                     }
+
+                    textarea{
+                        height: 100px;
+                        border-radius: 10px;
+                    }
                 }
             }
 
@@ -178,4 +183,19 @@ root{
         }
     }
     
+}
+
+@media screen and (min-width: 1024px) {
+    .accordionContainer{
+        .title{
+            font-size: var(--h3FontSize);
+
+            h3{
+                .icon{
+                    font-size: 1.54rem;
+                }
+            }
+        }
+    }
+
 }
