--- a/src/Components/Subscribe/Subscribe.scss
+++ b/src/Components/Subscribe/Subscribe.scss
@@ -63,3 +63,29 @@ root{
 
 }
 
+@media screen and (min-width: 480px) {
+    .subscribe{
+        .secContainer{
+            .img{
+                max-width: 75%;
+                margin: auto;
+            }
+            .textDiv{
+                h4{
+                    font-size: 1.5rem;
+                }
+                p{
+                    padding: 1rem 0;
+                    font-size: var(--h3FontSize);
+                }
+
+                .btn{
+                    padding: .3rem 2rem;
+                    font-size: var(--h2FontSize);
+                }
+            }
+        }
+    }
+    
+}
+
