--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -105,3 +105,11 @@ root{
     }
 
 }
+
+@media screen and (min-width: 448px){
+    .secContainer{
+        grid-template-columns: repeat(2, 1fr);
+        text-align: start !important;
+        align-items: center;
+    }
+}
