--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -111,5 +111,15 @@ root{
         grid-template-columns: repeat(2, 1fr);
         text-align: start !important;
         align-items: center;
+
+        .footer{
+            justify-content: center;
+        }
+    }
+}
+
+@media screen and (min-width: 448px){
+    .secContainer{
+        grid-template-columns: repeat(4, 1fr);
     }
 }
