--- a/src/Components/Portfolio/Portfolio.scss
+++ b/src/Components/Portfolio/Portfolio.scss
@@ -81,6 +81,7 @@ root{
 @media screen and (min-width: 480px){
     .portfolio{
         .secContainer{
+            grid-template-columns: repeat(1, 1fr);
             .leftContent{
                 .secHeading{
                     h3{
